--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -3,7 +3,7 @@
 
   "name": "FRD Homepage Plugin",
   "description": "This extension is a homepage for FRD",
-  "version": "1.1",
+  "version": "2.0.0",
 
   "default_locale" : "en",
   "icons" : {
@@ -18,8 +18,7 @@
   },
 
   "browser_action": {
-    "default_icon": "icons/19.png",
-    "default_popup": "popup/index.html"
+    "default_icon": "icons/19.png"
   },
 
   "permissions": [
