--- a/package.json
+++ b/package.json
@@ -1,38 +1,53 @@
 {
-  "name": "welcome-back",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "dev-newtab": "parcel newtab/index.html",
-    "dev-popup": "parcel popup/index.html",
-    "build-newtab": "parcel build --public-url ./ newtab/index.html -d extension/frd/newtab",
-    "build-popup": "parcel build --public-url ./ popup/index.html -d extension/frd/popup"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "babel-eslint": "^10.1.0",
-    "cross-env": "^7.0.3",
-    "eslint": "^7.22.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.24.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "parcel-bundler": "^1.12.5",
-    "prettier": "^2.2.1",
-    "sass": "^1.37.5"
-  },
+  "name": "frd-new-tab-plugin",
+  "version": "0.1.0",
+  "private": true,
   "dependencies": {
-    "node-fetch": "^2.6.1",
-    "react": "^16.4.0",
-    "react-dom": "^16.4.0",
+    "@testing-library/jest-dom": "^5.15.0",
+    "@testing-library/react": "^11.2.7",
+    "@testing-library/user-event": "^12.8.3",
+    "@types/jest": "^26.0.24",
+    "@types/node": "^12.20.36",
+    "media": "^0.2.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-scripts": "4.0.3",
+    "sass": "^1.43.4",
+    "web-vitals": "^1.1.2"
+  },
+  "scripts": {
+    "dev": "parcel src/index.html",
+    "build": "parcel build --public-url ./ src/index.html -d extension/newtab",
+    "start": "react-scripts start",
+    "build-old": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
+  "devDependencies": {
+    "@types/node-fetch": "^3.0.3",
+    "@types/react": "^17.0.33",
+    "@types/react-dom": "^17.0.10",
+    "parcel-bundler": "^1.12.5",
+    "typescript": "^4.4.4",
     "universal-cookie": "^4.0.4",
     "unsplash-js": "^7.0.15"
-  },
-  "browserslist": [
-    "last 2 Chrome versions"
-  ]
+  }
 }
