--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@types/node-fetch": "^3.0.3",
     "@types/react": "^17.0.33",
     "@types/react-dom": "^17.0.10",
+    "@types/styled-components": "^5.1.21",
     "parcel-bundler": "^1.12.5",
     "typescript": "^4.4.4",
     "universal-cookie": "^4.0.4",
